@@ -32,17 +32,21 @@ import no.ntnu.idatt2003.model.Player;
 import no.ntnu.idatt2003.model.tile.LadderTile;
 import no.ntnu.idatt2003.model.tile.Tile;
 
+/**
+ * The class that handles the view of the laddergame.
+ */
 public class LaddergameView implements PositionChangeObserver{
     public BorderPane mainLayout = new BorderPane();
     public GenericGameView genericGameView = new GenericGameView();
     private Game game;
     private final int playerSize = 25;
-    private final int pivotX = playerSize/2;
-    private final int pivotY = playerSize;
     private boolean animationActive = false;
-    private LaddergameController laddergameController = new LaddergameController();
+    private final LaddergameController laddergameController = new LaddergameController();
 
-    //Main layout
+    /**
+     * Creates the main layout of the game
+     * @return the main layout of the game
+     */
     public BorderPane mainLayout(){
         this.mainLayout.setId("mainLayout");
 
@@ -61,7 +65,7 @@ public class LaddergameView implements PositionChangeObserver{
                 currentStage.setScene(mainMenuScene);
                 currentStage.setTitle("Main Menu");
             } catch (IOException ex) {
-                ex.printStackTrace();
+                PopupView.showInfoPopup("Error!", "There was an error loading the main menu.");
             }
         });
         topMenu.getChildren().addAll(newGameButton, backToMenuButton);
@@ -73,14 +77,13 @@ public class LaddergameView implements PositionChangeObserver{
         //Adding everything to the final window
         mainLayout.setTop(topMenu);
         mainLayout.setRight(rightMenu);
-        genericGameView.setMainLayout(mainLayout);
+        GenericGameView.setMainLayout(mainLayout);
         return mainLayout;
     }
 
     /**
      * Shows the physical board
      * @param game the active game
-     * @return borderpane with the board
      */
     public void setGameBoard(Game game) {
         this.game = game;
@@ -111,7 +114,6 @@ public class LaddergameView implements PositionChangeObserver{
                 stackPane.setMaxSize(Double.MAX_VALUE, Double.MAX_VALUE);
                 GridPane.setHgrow(stackPane, Priority.ALWAYS);
                 GridPane.setVgrow(stackPane, Priority.ALWAYS);
-
 
                 if(i%2 == 0) {
                     if(j%2 == 0) {
@@ -186,6 +188,7 @@ public class LaddergameView implements PositionChangeObserver{
                 gameBoard.add(stackPane, j, i); 
             }
         }
+
         for (int i = 0; i < rows; i++) {
             for (int j = 0; j <cols; j++) {
                 Tile tile = game.getBoard().getGameboard().get(game.getBoard().getLocation(j, i)-1);
@@ -219,7 +222,8 @@ public class LaddergameView implements PositionChangeObserver{
             playerImage.setFitWidth(playerSize);
             playerImage.setFitHeight(playerSize);
             //rotate by the bottom middle of the image
-            Rotate rotate = new Rotate(72*index, pivotX, pivotY);
+            int pivotX = playerSize / 2;
+            Rotate rotate = new Rotate(72*index, pivotX, playerSize);
             playerImage.getTransforms().add(rotate);
             playerImage.setTranslateY(-10);
             index++;
@@ -274,6 +278,13 @@ public class LaddergameView implements PositionChangeObserver{
         mainLayout.setRight(rightMenu);
     }
     
+    /**
+     * Returns the tile at the specified coordinates in the grid
+     * @param grid the grid to search in
+     * @param col the column index
+     * @param row the row index
+     * @return the tile at the specified coordinates, or null if not found
+     */
     private StackPane getTileAt(GridPane grid, int col, int row) {
         for (Node node : grid.getChildren()) {
             if (GridPane.getColumnIndex(node) == col && GridPane.getRowIndex(node) == row) {
@@ -294,7 +305,6 @@ public class LaddergameView implements PositionChangeObserver{
     /**
      * Updates the position of the player on the board
      * @param player the player to update
-     * @param newPosition the new position of the player
      */
     @Override
     public void positionChanged(Player player) {
@@ -304,7 +314,7 @@ public class LaddergameView implements PositionChangeObserver{
         Node node = mainLayout.lookup("#"+id);
         Rotate rotate = null;
         if (node != null) {
-            rotate = (Rotate) node.getTransforms().get(0);
+            rotate = (Rotate) node.getTransforms().getFirst();
             ((Pane) node.getParent()).getChildren().remove(node);
         }
         ImageView playerImage = new ImageView(player.getPicture().toExternalForm());
@@ -317,7 +327,7 @@ public class LaddergameView implements PositionChangeObserver{
     
         Label turnLabel = (Label) mainLayout.lookup("#whosTurn");
         if (game.getActivePlayer()+1 >= game.getPlayers().size()) {
-            turnLabel.setText(game.getPlayers().get(0) + "'s turn");
+            turnLabel.setText(game.getPlayers().getFirst() + "'s turn");
         } else {
             turnLabel.setText(game.getPlayers().get(game.getActivePlayer()+1) + "'s turn");
         }
@@ -326,12 +336,17 @@ public class LaddergameView implements PositionChangeObserver{
         if (positionLabel != null) {
             positionLabel.setText(player.getPosition() + "");
         } else {
-            System.out.println("Position label not found for player " + player.getPlayerNumber());
+            PopupView.showInfoPopup("Error!", "Position label not found for player " + player.getPlayerNumber());
         }
 
         playerPaused(player);
     }
 
+    /**
+     * Updates the player box when a player is moved
+     * @param playerToSwitch
+     * @param playerToBeSwitched 
+     */
     public void playerSwitch (Player playerToSwitch, Player playerToBeSwitched) {
         URL swapUrl = getClass().getResource("/tiles/arrows.png");
         String playerSwitchText = playerToSwitch.getPlayerName() + " and " + playerToBeSwitched.getPlayerName() + " have switched places!";
@@ -340,9 +355,13 @@ public class LaddergameView implements PositionChangeObserver{
         showImageAndText(swapUrl, playerSwitchText);
     }
 
+    /**
+     * Updates the player box when a player is paused
+     * @param player the player to be paused
+     */
     public void playerPaused (Player player) {
         HBox pictureNameSplitter = (HBox) mainLayout.lookup("#playerBox" + player.getPlayerNumber());
-        if(player.getPlayerPause() == false) {
+        if(!player.getPlayerPause()) {
             ImageView pauseImage = (ImageView) pictureNameSplitter.lookup("#pause"+player.getPlayerNumber());
             pictureNameSplitter.getChildren().remove(pauseImage);
         } else {
@@ -352,7 +371,7 @@ public class LaddergameView implements PositionChangeObserver{
             pauseImage.setId("pause"+player.getPlayerNumber());
             pauseImage.setFitWidth(20);
             pauseImage.setFitHeight(20);
-            pictureNameSplitter.getChildren().add(0,pauseImage);   
+            pictureNameSplitter.getChildren().addFirst(pauseImage);
 
             //Adds visual for pause on the whole board
             String pauseText = player.getPlayerName() + " has been paused!";
@@ -360,6 +379,11 @@ public class LaddergameView implements PositionChangeObserver{
         }	
     }
 
+    /**
+     * Shows an image and text on the board for 2 seconds
+     * @param imageUrl the url of the image to show
+     * @param text the text to show
+     */
     public void showImageAndText(URL imageUrl, String text) {
         int cols = game.getBoard().getCols();
         int rows = game.getBoard().getRows();
